--- a/cores.html
+++ b/cores.html
@@ -60,12 +60,8 @@
                 </ul>
             </div>
 
-            <script>
-                function trocaFundo () {
-                    let x = document.getElementById('corFundo').value 
-                    document.getElementById('fundointerativo').style.backgroundColor = x
-                }
-            </script>
+        
+        <script type="text/javascript" src="/js.js"></script>
         </main>
     </body>
 </html>    
